tag google verification

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 	<head>
 		<title>JTEL</title>
 		<meta charset="UTF-8">
+		<meta name="google-site-verification" content="sG1QwdiQUZkAebu6ROI7pw3RW2scMkOktQziEPQSae4" />
 		<meta name="keywords" content="jtel, jaragua telecomunicaçoes, jaragua telecomunicacoes, jaraguatel, Jaraguá Telecomunicações">
 		<meta name="description" content="Jaraguá Telecomunicações">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
