--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 	<head>
-		<title>JTEL</title>
+		<title>Jaraguá Telecomunicações</title>
 		<meta charset="UTF-8">
 		<meta name="google-site-verification" content="sG1QwdiQUZkAebu6ROI7pw3RW2scMkOktQziEPQSae4" />
 		<meta name="keywords" content="jtel, jaragua telecomunicaçoes, jaragua telecomunicacoes, jaraguatel, Jaraguá Telecomunicações">
