--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 		<link rel="icon" href="img/icon.png" sizes="128x128" />
 		<link rel="icon" href="img/icon.png" sizes="32x32" />
 		<link rel="icon" href="img/icon.png" sizes="16x16" />
-		<link rel="stylesheet" href="css/style.css?2">
+		<link rel="stylesheet" href="css/style.css">
 	</head>
 	<body>
 		<div class="total">
@@ -38,6 +38,6 @@
 			<p class="rodape">Jaraguá Telecomunicações LTDA - Copyright©2019 - Todos os direitos reservados. Desenvolvido por Jairo.</p>
 			<br/>
 		</div>
-		<script src="js/js.js?2"></script>
+		<script src="js/js.js"></script>
 	</body>
 </html>
